--- a/index.html
+++ b/index.html
@@ -250,6 +250,20 @@
             </div>
         </section>
 
+        <!-- interview/rejected section -->
+         <section id="interview-rejected" class="mb-14 hidden">
+            <div class="p-6 bg-[#FFFFFF] border border-[#F1F2F4] rounded-lg">
+               <div class="px-6 py-28">
+                <div class="mb-5 flex justify-center items-center">
+                    <img src="jobs.png" alt="">
+                </div>
+                <h4 class="text-center mb-1 text-2xl font-semibold text-[#002C5C]">No jobs available</h4>
+                <p class="text-[1rem] text-[#64748B] text-center">Check back soon for new job opportunities</p>
+               </div>
+               
+            </div>
+         </section>
+
     </main>
 
 </body>
