--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">Mobile First Corp</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">React Native Developer</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">Remote  •  Full-time  •  $130,000 - $175,000</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">React Native Developer</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">Remote  •  Full-time  •  $130,000 - $175,000</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -87,10 +87,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">WebFlow Agency</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">Web Designer & Developer</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">Los Angeles, CA  •  Part-time  •  $80,000 - $120,000</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">Web Designer & Developer</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">Los Angeles, CA  •  Part-time  •  $80,000 - $120,000</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">Create stunning web experiences for high-profile clients. Must have portfolio and experience with modern web design trends.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">Create stunning web experiences for high-profile clients. Must have portfolio and experience with modern web design trends.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -111,10 +111,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">DataViz Solutions</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">Data Visualization Specialist</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">Boston, MA  •  Full-time  •  $125,000 - $165,000</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">Data Visualization Specialist</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">Boston, MA  •  Full-time  •  $125,000 - $165,000</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">Transform complex data into compelling visualizations. Required skills: D3.js, React, and strong analytical thinking.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">Transform complex data into compelling visualizations. Required skills: D3.js, React, and strong analytical thinking.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -135,10 +135,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">CloudFirst Inc</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">Backend Developer</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">Seattle, WA  •   Full-time  •  $140,000 - $190,000</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">Backend Developer</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">Seattle, WA  •   Full-time  •  $140,000 - $190,000</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">Design and maintain scalable backend systems using Python and AWS. Work with modern DevOps practices and cloud infrastructure.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">Design and maintain scalable backend systems using Python and AWS. Work with modern DevOps practices and cloud infrastructure.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -159,10 +159,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">Innovation Labs</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">UI/UX Engineer</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">Austin, TX  •   Full-time  •  $110,000 - $150,000</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">UI/UX Engineer</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">Austin, TX  •   Full-time  •  $110,000 - $150,000</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">Create beautiful and functional user interfaces for our suite of products. Strong design skills and frontend development expertise required.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">Create beautiful and functional user interfaces for our suite of products. Strong design skills and frontend development expertise required.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -183,10 +183,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">MegaCorp Solutions</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">JavaScript Developer</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">New York, NY  •  Full-time  •  $130,000 - $170,00</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">JavaScript Developer</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">New York, NY  •  Full-time  •  $130,000 - $170,00</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">Build enterprise applications with JavaScript and modern frameworks. We offer competitive compensation, health insurance, and professional development opportunities.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">Build enterprise applications with JavaScript and modern frameworks. We offer competitive compensation, health insurance, and professional development opportunities.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -207,10 +207,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">StartupXYZ</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">Full Stack Engineer</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">Remote  •  Full-time  •  $120,000 - $160,000</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">Full Stack Engineer</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">Remote  •  Full-time  •  $120,000 - $160,000</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">Join our fast-growing startup and work on our core platform. Experience with Node.js and React required. Great benefits and equity package included.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">Join our fast-growing startup and work on our core platform. Experience with Node.js and React required. Great benefits and equity package included.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -231,10 +231,10 @@
                <!-- Main part -->
                 <div>
                         <h3 class="company-name text-xl font-semibold text-[#002C5C] mb-1">TechCorp Industries</h3>
-                        <p class="text-[1rem] leading-5 text-[#64748B]">Senior Frontend Developer</p>
-                        <p class="my-[20px] text-[14px] leading-5 text-[#64748B]">San Francisco, CA  •  Full-time  •   $130,000 - $175,000</p>
+                        <p class="position text-[1rem] leading-5 text-[#64748B]">Senior Frontend Developer</p>
+                        <p class="locationTimeSalary my-[20px] text-[14px] leading-5 text-[#64748B]">San Francisco, CA  •  Full-time  •   $130,000 - $175,000</p>
                         <button class="status text-[14px] font-medium text-[#002C5C] bg-[#EEF4FF] px-3 py-2 rounded mb-2">NOT APPLIED</button>
-                        <p class="text-[14px] text-[#323B49] mb-5">We are looking for an experienced Frontend Developer to build scalable web applications using React and TypeScript. You will work with a talented team on cutting-edge projects.</p>
+                        <p class="description text-[14px] text-[#323B49] mb-5">We are looking for an experienced Frontend Developer to build scalable web applications using React and TypeScript. You will work with a talented team on cutting-edge projects.</p>
                         <div class="">
                             <button class="interview text-[14px] text-[#10B981] font-semibold border border-[#10B981] rounded px-3 py-2">INTERVIEW</button>
 
@@ -262,6 +262,12 @@
                </div>
                
             </div>
+         </section>
+
+         <!-- new DIV -->
+
+         <section id="filter-part" class="space-y-4 mb-14 hidden">
+
          </section>
 
     </main>
